deployments/manifest/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: webhook
  name: webhook
  namespace: k8s-webhook
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webhook
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: webhook
    spec:
      containers:
      - name: k8s-webhook
        image: voidking/k8s-webhook:v0.1.1
        resources: {}
        volumeMounts:
        - name: config
          mountPath: "/etc/k8s-webhook/configs"
          readOnly: true
      volumes:
      - name: config
        configMap:
          name: webhook-config
          # 来自 ConfigMap 的一组键，将被创建为文件
          items:
          - key: "config.yaml"
            path: "config.yaml"
          - key: "podtemplate.yaml"
            path: "podtemplate.yaml"
status: {}
