deployments/manifest/mwc.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: k8s-webhook
webhooks:
- name: webhook.k8s-webhook.svc
  clientConfig:
    # url适用于apiserver访问集群外的webhook，service适用于apiserver访问集群内webhook
    #url: "https://webhook.k8s-webhook.svc/pod/mutating"
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUVlVENDQXVHZ0F3SUJBZ0lRQ3QyaEdsTzNwdUx2K3lGYUI0UzRqVEFOQmdrcWhraUc5dzBCQVFzRkFEQlYKTVI0d0hBWURWUVFLRXhWdGEyTmxjblFnWkdWMlpXeHZjRzFsYm5RZ1EwRXhGVEFUQmdOVkJBc01ESEp2YjNSQQpiRzlqWVd4allURWNNQm9HQTFVRUF3d1RiV3RqWlhKMElISnZiM1JBYkc5allXeGpZVEFlRncweU5ERXdNRGd3Ck56TXpOVFZhRncwek5ERXdNRGd3TnpNek5UVmFNRlV4SGpBY0JnTlZCQW9URlcxclkyVnlkQ0JrWlhabGJHOXcKYldWdWRDQkRRVEVWTUJNR0ExVUVDd3dNY205dmRFQnNiMk5oYkdOaE1Sd3dHZ1lEVlFRRERCTnRhMk5sY25RZwpjbTl2ZEVCc2IyTm [...]
    service:
        name: webhook
        namespace: k8s-webhook
        port: 8443
        path: /pod/mutating
  objectSelector:
    matchExpressions:
    - key: "webhook"
      operator: "Exists"
  rules:
  - operations: ["CREATE","UPDATE"]
    apiGroups: ["*"]
    apiVersions: ["*"]
    resources: ["pods"]
    scope: "*"
  failurePolicy: Fail
  sideEffects: None
  admissionReviewVersions: ["v1"]
